# wallflower

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
capture/: __init__.py  bfi_pcap.py  csi_picoscenes.py  naming.py
configs/: ap_channels.yaml  lab.yaml  nodes.yaml
experiments/: README.md  bfi_identity_baseline.yaml  csi_identity_baseline.yaml  empty_room_control.yaml  perspective_ablation.yaml  sample_rate_ablation.yaml  walking_style_transfer.yaml
models/: __init__.py  dataset.py  evaluate.py  lstm_classifier.py  metrics.py  train.py
nodes/: __init__.py  bfi_client_agent.py  bfi_recorder_agent.py  common.py  csi_agent.py  healthcheck.py  traffic_agent.py
orchestrator/: __init__.py  cli.py  clocks.py  metadata.py  session.py  ssh.py
parsers/: __init__.py  bfi_decode.py  csi_decode.py  normalise.py  parse_bfi.py  parse_csi.py  segment_trials.py
parsers/tests/: test_bfi_decode.py  test_csi_decode.py
scripts/: README.md  check_radios.sh  install_node.sh  sync_clocks.sh
viz/: __init__.py  analyze_motion.py  live_motion.py
viz/static/: live_motion.css  live_motion.html  live_motion.js
wallflower/: __init__.py  contract.py
